# ascent-beta

./: .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  _config.yml  airy.html  blog.html  build.bat  control.html  discrete-sampling.html  examples-2.html  examples.html  index.html  left-sidebar.html  lorenz.html  multithread.html  no-sidebar.html  page1.html  params.json  projects.html  showcase.html  spring-damper.html  support.html  system.html
_includes/: agent-chart.html  airy-chart.html  airy-compare.html  footer.html  head.html  header.html  lorenz-graph.html  lorenz.html  system-chart-300.html  system-chart.html  system.html
_layouts/: landing-page.html  post.html  slide.html
_posts/: 2016-04-11-Example.md
ascent/: Link.h  Module.h
ascent/algorithms/: Derivative.h  Extrapolation.h  Fit2D.h  Integral.h  Interpolation.h  Statistics.h  StatisticsVector.h
ascent/core/: DynamicMap.h  LinkBase.h  ModuleCore.h  ModuleMacros.h  Parameter.h  Simulator.h  State.h  StateStepper.h  Stepper.h  Stopper.h  ToString.h  Type.h  Vars.h  stopper.h
ascent/history/: History.h  HistorySparse.h  HistoryVector.h  HistoryVectorSparse.h
ascent/integrators/: DOPRI45.h  DOPRI87.h  Euler.h  PC233.h  RK2.h  RK4.h  RKMM.h  RTAM2.h  RTAM3.h  RTAM4.h
ascent/io/: ChaiEngine.h  JsonAPI.h
css/: style.css
data/: agent.js  airy.js  airycompare.js  control.js  lorenz-anim.js  lorenz.js  lorenzanim.js  multithread.js  system.js
doxygen/: annotated.html  annotated_dup.js  classasc_1_1_chai_engine-members.html  classasc_1_1_chai_engine.html  classasc_1_1_chai_engine.js  classasc_1_1_d_o_p_r_i45-members.html  classasc_1_1_d_o_p_r_i45.html  classasc_1_1_d_o_p_r_i45.js  classasc_1_1_d_o_p_r_i87-members.html  classasc_1_1_d_o_p_r_i87.html  classasc_1_1_d_o_p_r_i87.js  classasc_1_1_dynamic_map-members.html  classasc_1_1_dynamic_map.html  classasc_1_1_dynamic_map.js  classasc_1_1_euler-members.html  classasc_1_1_euler.html  classasc_1_1_euler.js  classasc_1_1_history-members.html  classasc_1_1_history.html  classasc_1_1_history.js  classasc_1_1_history_sparse-members.html  classasc_1_1_history_sparse.html  classasc_1_1_history_sparse.js  classasc_1_1_history_vector-members.html  classasc_1_1_history_vector.html  classasc_1_1_history_vector.js  classasc_1_1_history_vector_sparse-members.html  classasc_1_1_history_vector_sparse.html  classasc_1_1_history_vector_sparse.js  classasc_1_1_link-members.html  classasc_1_1_link.html  classasc_1_1_link.js  classasc_1_1_link_base-members.html  classasc_1_1_link_base.html  classasc_1_1_link_base.js  classasc_1_1_module-members.html  classasc_1_1_module.html  classasc_1_1_module.js  classasc_1_1_module_core-members.html  classasc_1_1_module_core.html  (+64 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+37 more)
src/: Module.cpp
(+16 files in other folders)
